--- a/src/framework/preferences/css/sass/SeparatedPanelPrefsEditor.scss
+++ b/src/framework/preferences/css/sass/SeparatedPanelPrefsEditor.scss
@@ -72,7 +72,9 @@ body {
         .fl-prefsEditor-showHide {
             border-radius: 0;
             display: block;
+            height: 1.5rem;
             margin: 0;
+            min-height: 24px;
             position: initial;
             width: 100%;
 
@@ -102,7 +104,6 @@ body {
             .fl-slidingPanel-arrow {
                 border-radius: 10px 0 0 10px;
                 grid-area: 1 / 1 / 2 / 2;
-                width: 1rem;
 
                 &::before {
                     content: "\1438";
@@ -118,7 +119,8 @@ body {
             .fl-prefsEditor-showHide {
                 border-radius: 10px 0 0 10px;
                 height: 4rem;
-                width: 1rem;
+                min-width: 24px;
+                width: 1.5rem;
 
                 .fl-slidingPanel-arrow::before {
                     content: "\1433";
